fix z-indexes

--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,8 @@ body{
     background-color: #263c53;
 }
 .сomp-head{
+    position: relative;
+    z-index: 10;
     font-size: 5vmax;
     margin-left: 10rem;
     font-weight: 900;
@@ -180,6 +182,8 @@ body{
     color: #fff;
 }
 .comp-text{
+    position: relative;
+    z-index: 10;
     margin-top: 2rem;
     margin-bottom: 20rem;
     margin-left: 10rem;
@@ -196,12 +200,16 @@ body{
     margin-left: 2rem;
 }
 .comp-text-bl{
+    position: relative;
+    z-index: 10;
     font-size: 1.2em;
     color:#36b6cd;
     margin-bottom: 0;
     text-align: end;
 }
 .comp-text-wh{
+    position: relative;
+    z-index: 10;
     font-size: 1.2em;
     color:#fff;
     margin-bottom: 0;
